--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -35,7 +35,7 @@ jobs:
           tar czf ../dist/assets.tar.gz .
 
       - name: Upload Tar
-        id: upload-release-asset
+        id: upload-tar
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -46,7 +46,7 @@ jobs:
           asset_content_type: application/gzip
 
       - name: Upload Install Script
-        id: upload-release-asset
+        id: upload-install-script
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
