--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,5 +20,6 @@ jobs:
         with:
           # (Optional) specify config name to use, relative to .github/. Default: release-drafter.yml
           config-name: release-drafter.yaml
+          publish: true
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
