--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,8 +21,8 @@ jobs:
       - name: Setup directory
         run: |
           mkdir -p public
-          cp scripts/install.sh public
-          cp scripts/install.sh public/index.html
+          cp install.sh public
+          cp install.sh public/index.html
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
